--- a/project_test.html
+++ b/project_test.html
@@ -17,6 +17,7 @@
     <script src="Base64.js"></script>
     <script src="boredPanda.js"></script>
     <script src="md5.js"></script>
+    <script src="baseConverter.js"></script>
 
 
 </head>
