--- a/Project_refactor.html
+++ b/Project_refactor.html
@@ -15,9 +15,9 @@
     <!-- Javascript sources -->
     <script src="jquery-3.2.1.min.js"></script>
     <script src="Base64.js"></script>
-    <script src="boredPanda.js"></script>
     <script src="md5.js"></script>
     <script src="baseConverter.js"></script>
+    <script src="project_script.js"></script>
 
 
 </head>
